--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Description: Bayesian additive regression trees (BART) modeling for G computatio
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
+LazyLoad: no
 LinkingTo: Rcpp
 Imports: Rcpp
 RoxygenNote: 6.0.1
